# ChangeLog for sys-devel/autoconf-wrapper
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-devel/autoconf-wrapper/ChangeLog,v 1.60 2008/12/31 19:54:49 bluebird Exp $

  31 Dec 2008; Friedrich Oslage <bluebird@gentoo.org>
  autoconf-wrapper-6.ebuild:
  Stable on sparc, bug #245067

  27 Dec 2008; Brent Baude <ranger@gentoo.org> autoconf-wrapper-6.ebuild:
  stable ppc64, bug 245067

  21 Sep 2008; Brent Baude <ranger@gentoo.org> autoconf-wrapper-5.ebuild:
  stable ppc64, bug 238206

  21 Sep 2008; nixnut <nixnut@gentoo.org> autoconf-wrapper-5.ebuild:
  Stable on ppc wrt bug 238206

  20 Sep 2008; Steve Dibb <beandog@gentoo.org> autoconf-wrapper-5.ebuild:
  amd64 stable, bug 238206

  20 Sep 2008; Raúl Porcel <armin76@gentoo.org> autoconf-wrapper-5.ebuild:
  alpha/ia64/sparc/x86 stable wrt #238206

*autoconf-wrapper-6 (20 Sep 2008)

  20 Sep 2008; Mike Frysinger <vapier@gentoo.org> +files/ac-wrapper-6.sh,
  +autoconf-wrapper-6.ebuild:
  Add support for autoconf-2.63.

  28 May 2008; Guy Martin <gmsoft@gentoo.org> autoconf-wrapper-5.ebuild:
  Stable on hppa.

*autoconf-wrapper-5 (10 Apr 2008)

  10 Apr 2008; Mike Frysinger <vapier@gentoo.org> +files/ac-wrapper-5.sh,
  +autoconf-wrapper-5.ebuild:
  Add support for autoconf-2.62 #217087.

  05 Jan 2007; Jeroen Roovers <jer@gentoo.org> autoconf-wrapper-4-r3.ebuild:
  Stable for HPPA (bug #159416).

  03 Jan 2007; nixnut <nixnut@gentoo.org> autoconf-wrapper-4-r3.ebuild:
  Stable on ppc wrt bug 159416

  03 Jan 2007; Steve Dibb <beandog@gentoo.org> autoconf-wrapper-4-r3.ebuild:
  amd64 stable, bug 159416

  02 Jan 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  autoconf-wrapper-4-r3.ebuild:
  Stable on sparc wrt #159416

  30 Dec 2006; Tom Gall <tgall@gentoo.org>
  autoconf-wrapper-4-r3.ebuild:
  stable on ppc64 bug #159416

  30 Dec 2006; Andrej Kacian <ticho@gentoo.org>
  autoconf-wrapper-4-r3.ebuild:
  Stable on x86, bug #159416.
